# homebot

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  README.mdpp  page.pkl  pylintrc  pyproject.toml  sandbox.py
assets/: tpl_hass_state_change.mako  tpl_lego_pricing.json  tpl_traffic_train.mako
config/: run.py
configs/: prod.py
configs/complex/: run.py
configs/simple/: run.py
docker/: install_deps  setup_prereqs
examples/: slack_simple.py
homebot/: __init__.py  __main__.py  assets.py  config.py  flows.py  models.py  orchestra.py  utils.py  validator.py
homebot/actions/: __init__.py  base.py  slack.py
homebot/formatter/: __init__.py  base.py  help.py  slack.py  traffic.py
homebot/listener/: __init__.py  base.py  slack.py
homebot/processors/: __init__.py  base.py  hass.py  lego.py  traffic.py
homebot/services/: __init__.py  base.py  hass.py  traffic.py
tasks/: __init__.py
tests/: conftest.py  test_asset_manager.py  test_runner.py  test_validator.py  utils.py
tests/actions/: test_base.py  test_slack_send_message.py
tests/formatter/: test_formatter.py  test_help_text_table.py  test_slack_codify.py  test_slack_template.py  test_string_format.py
tests/listener/: test_slack_direct_mention.py
tests/models/: test_slack_template.py
tests/orchestrator/: test_base.py
tests/processors/: test_error.py  test_error_processor.py  test_hass_entity.py  test_hass_on_off_switch.py  test_help.py  test_lego_pricing.py  test_traffic_traffic.py  test_unknown_command.py  test_version.py
tests/resources/: config.py
(+7 files in other folders)
